--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules/
 dist/
 docs/.vuepress/.temp/
-docs/.vuepress/.cache
+docs/.vuepress/.cache/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -23,4 +23,4 @@ selenium-debug.log
 *.local
 
 yarn.lock
-/docs/.vuepress/.cache/
+
