--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .DS_Store
 node_modules/
-/.cache
 docs/.vuepress/.temp/
 docs/.vuepress/.cache/
 npm-debug.log*
@@ -24,3 +23,4 @@ selenium-debug.log
 
 yarn.lock
 
+/docs/.vuepress/.cache/deps/
